Grace/tests/gibbs/errors/t124.grace
// ERROR = L0012
var num := 1x123
